BoqBNEApprovalHistory table added by edmx

--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApprovalList.cshtml
@@ -18,14 +18,14 @@
 <section class="content-header">
     <h1>
         <span>
-          Bill Requisition Item Approval List
+         BudgetAndEstimating Item Approval List
         </span>
 
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
         <li class="active">
-            Bill Requisition Item Approval List
+        BudgetAndEstimating Item Approval List
         </li>
     </ol>
 </section>
