--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApproveSlave.cshtml
@@ -17,7 +17,7 @@
 <section class="content-header">
     <h1>
         <span>
-            Requisition : Managing Director Approval
+            Budget And Estimating Item Approval
         </span>
     </h1>
     <ol class="breadcrumb">
