--- a/KGERP/Views/Configuration/CommonBankBranch.cshtml
+++ b/KGERP/Views/Configuration/CommonBankBranch.cshtml
@@ -1,24 +1,22 @@
 ﻿@model KGERP.Service.Implementation.Configuration.VMCommonBankBranch
 @{
-
-    ViewData["Title"] = "Bank";
+    ViewData["Title"] = "New Bank Branch";
     Layout = "~/Views/Shared/_Layout.cshtml";
-
 }
 
 <style type="text/css">
-
     input, select, textarea {
         max-width: 100%;
     }
 </style>
+
 <section class="content-header">
     <h1>
-        Bank Branch
+        New Bank Branch
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Bank Branch</li>
+        <li class="active">New Bank Branch</li>
     </ol>
 </section>
 
@@ -29,9 +27,7 @@
             <div class="col-md-3">
                 <div class="box">
                     <div class="box-danger">
-                        <div class="box-header">
-                            <h4>Add Bank Branch</h4>
-                        </div>
+                        <div class="box-header"></div>
                         <!-- /.box-header -->
                         <div class="box-body">
 
@@ -44,24 +40,24 @@
 
                             <div class="row">
                                 <div class="form-group" style="padding:0px">
-                                    <label for="message-text" class="col-form-label">Bank:</label>
-                                    @Html.DropDownListFor(model => model.BankId, Model.BankList as SelectList, "--Bank--", new { id = "ddlBankId", @class = "form-control", required = "true" })
+                                    <label class="form-label">Select Bank<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.DropDownListFor(model => model.BankId, Model.BankList as SelectList, "==Select Bank==", new { id = "ddlBankId", @class = "form-control", required = "true" })
                                     @Html.ValidationMessageFor(model => model.BankId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="form-group" style="padding:0px">
-                                    <label for="message-text" class="col-form-label">Bank Branch:</label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtBankBranchName", @class = "form-control input-sm", @placeholder = "Branch", required = "true" })
+                                    <label class="form-label">Bank Branch<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtBankBranchName", @class = "form-control input-sm", @placeholder = "Branch Name", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="form-group" style="padding:0px">
-                                    <label for="message-text" class="col-form-label">Address:</label>
-                                    @Html.TextBoxFor(model => model.Address, new { id = "txtAddress", @class = "form-control input-sm", @placeholder = "Address", required = "true" })
+                                    <label for="message-text" class="col-form-label">Address</label>
+                                    @Html.TextBoxFor(model => model.Address, new { id = "txtAddress", @class = "form-control input-sm", @placeholder = "Type address here" })
                                     @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -87,9 +83,7 @@
             <div class="col-md-9">
                 <div class="box">
                     <div class="box-danger">
-                        <div class="box-header">
-                            <h4>Bank Branch List</h4>
-                        </div>
+                        <div class="box-header"></div>
                         <!-- /.box-header -->
                         <div class="box-body">
                             <div class="table-responsive col-md-12">
