--- a/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
@@ -324,7 +324,7 @@
                                                     <span class="label label-success">Payment Done!</span>
                                                 }
                                                 else
-                                                { 
+                                                {
                                                     <span class="label label-info">Not Yet!</span>
                                                 }
                                             </td>
@@ -352,26 +352,40 @@
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
                                                 <td>
-                                                    @if (item.ApprobalRemarks != null)
+                                                    @if (item.SignatoryName == "Initiator")
                                                     {
-                                                        <span style="font-size: 12px"><b>Remarks: </b> @item.ApprobalRemarks</span>
+                                                        <span style="font-size: 11px">
+                                                            <b>Time: </b> @item.ModifiedDate.ToString()
+                                                        </span>
                                                     }
                                                     else
                                                     {
-                                                        <span style="font-size: 12px"><b>Remarks: </b> @(item.SignatoryName == "Initiator" ? "Requisition Created. " : "N/A")</span>
+                                                        <span style="font-size: 11px">
+                                                            <b>Time: </b> @(item.ModifiedDate == null ? "Not Approve Yet!" : item.ModifiedDate.ToString())
+                                                        </span>
                                                     }
+
                                                     <br />
                                                     @if (item.SignatoryName == "Initiator")
                                                     {
                                                         <span style="font-size: 11px">
-                                                            <b>Time: </b> @(item.ModifiedDate == null ? "Pending" : item.ModifiedDate.ToString())
+                                                            <b>Created By: </b>  @item.ApproverNameWithId
                                                         </span>
                                                     }
                                                     else
                                                     {
                                                         <span style="font-size: 11px">
-                                                            <b>Time: </b> @(item.ModifiedDate == null ? "Pending" : item.ModifiedDate.ToString())
+                                                            <b>Approved By: </b> @(item.ApproverNameWithId == " ()" ? "-" : item.ApproverNameWithId)
                                                         </span>
+                                                    }
+                                                    <br />
+                                                    @if (item.ApprovalRemarks != null)
+                                                    {
+                                                        <span style="font-size: 12px"><b>Remarks: </b> @item.ApprovalRemarks</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span style="font-size: 12px"><b>Remarks: </b> @(item.SignatoryName == "Initiator" ? "Requisition Created. " : "N/A")</span>
                                                     }
                                                 </td>
                                                 if (item.SignatoryId == (int)EnumBRequisitionSignatory.MD)
@@ -379,13 +393,13 @@
                                                     <td>
                                                         @if (item.VoucherPaymentStatus != null)
                                                         {
-                                                            <center>
+                                                            <center style="margin-top: 15px !important">
                                                                 <b>@item.VoucherPaymentStatus</b>
                                                             </center>
                                                         }
                                                         else
                                                         {
-                                                            <center>
+                                                            <center style="margin-top: 10px !important">
                                                                 <small>Not selected!</small>
                                                             </center>
                                                         }
